--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -102,11 +102,11 @@
       <div class="copyright">
         <div class="container">
           <div class="col-md-6">
-            <p>© 2017 - Joel, Aaron, Randy, Sam</p>
+            <p>© 2017 - Ricky, Jay P, Daniel, Michael</p>
           </div>
           <div class="col-md-6">
             <ul class="bottom_ul">
-              <li><a href="https://github.com/amhursh/music_shop/">Source Code</a></li>
+              <li><a href="https://github.com/jayphodges/the_pivot">Source Code</a></li>
             </ul>
           </div>
         </div>
